welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not enough arguments for method growFlowers: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	    growFlowers();
                       ^FlowerPot:2: error: not found: value setColorBrosse
	setColorBrosse(c); baisseBrosse();
        ^FlowerPot:7: error: not found: value recule2
	recule2();
        ^FlowerPot:9: error: not found: value setColorBrosse
	setColorBrosse(Color.yellow); leveBrosse();
        ^